tests/http/snapshots/http__v2_tiers__offline_day.snap
---
source: tests/http/v2_tiers.rs
expression: "get(\"/api/v2/channels/11111/tiers/2026-03-01?mode=offline\").send().await"
---
GET /api/v2/channels/11111/tiers/2026-03-01?mode=offline
status: 200 OK
content-type: application/json
cache-control: no-cache
---
{
  "entries": [
    {
      "messages": 1,
      "tierScore": 50,
      "uniqueMessages": 1,
      "userId": "22222",
      "windows": {
        "15m": {
          "active": 1,
          "rank": 1,
          "tier": "HT1"
        },
        "1m": {
          "active": 1,
          "rank": 1,
          "tier": "HT1"
        },
        "30m": {
          "active": 1,
          "rank": 1,
          "tier": "HT1"
        },
        "5m": {
          "active": 1,
          "rank": 1,
          "tier": "HT1"
        },
        "60m": {
          "active": 1,
          "rank": 1,
          "tier": "HT1"
        }
      }
    },
    {
      "messages": 1,
      "tierScore": 45,
      "uniqueMessages": 1,
      "userId": "33333",
      "windows": {
        "15m": {
          "active": 1,
          "rank": 2,
          "tier": "LT1"
        },
        "1m": {
          "active": 1,
          "rank": 2,
          "tier": "LT1"
        },
        "30m": {
          "active": 1,
          "rank": 2,
          "tier": "LT1"
        },
        "5m": {
          "active": 1,
          "rank": 2,
          "tier": "LT1"
        },
        "60m": {
          "active": 1,
          "rank": 2,
          "tier": "LT1"
        }
      }
    }
  ],
  "mode": "offline",
  "period": "2026-03-01",
  "timezone": "Europe/Moscow",
  "totalMessages": 2,
  "totalUniqueMessages": 2,
  "totalUsers": 2
}
