tests/http/snapshots/http__v2_tiers__streams_need_twitch.snap
---
source: tests/http/v2_tiers.rs
expression: "get(\"/api/v2/channels/11111/streams?year=2026\").send().await"
---
GET /api/v2/channels/11111/streams?year=2026
status: 503 Service Unavailable
content-type: application/problem+json
---
{
  "code": "upstream_unavailable",
  "status": 503,
  "title": "Twitch cannot be queried yet"
}
